@@ -8,6 +8,8 @@ klibcdir    = $(udevdir)/klibc
 
 CC = gcc
 GCCINCDIR := ${shell $(CC) -print-search-dirs | sed -ne "s/install: \(.*\)/\1include/gp"}
+KERNEL_DIR = /lib/modules/${shell uname -r}/build
+
 CFLAGS = -pipe -g -O2 -Wall -Wunused -Wstrict-prototypes -nostdinc \
          -I$(klibcdir)/klibc/include -I$(klibcdir)/klibc/include/bits32 \
          -I$(GCCINCDIR) -I$(KERNEL_DIR)/include -I. -Iioctl
@@ -20,3 +22,7 @@ all:	$(OBJS)
 
 clean:
 	rm -f core *.o ioctl/*.o ioctl/*.so
+
+install:
+
+uninstall:
